# bevy_game

./: Cargo.toml  README.md
.github/workflows/: static.yml
src/: main.rs
src/core/: components.rs  resources.rs
src/systems/: enemy.rs  mod.rs  player.rs  projectile.rs  ui.rs
static/: index.html
